--- a/css/style.css
+++ b/css/style.css
@@ -23,25 +23,37 @@
 
 #left-top-container {
     background-color: var(--left-top-container);
+    margin: 5% 50% 50% 10%;
+    height: 50%;
+    width: 50%;
+    padding: 25% 5% 30% 0;
 }
 
 #left-bottom-container {
     background-color: var(--left-top-container);
-
+    position: relative;
+    height: 20%;
+    width: 75%;
+    margin: -25% auto 35% 25%;
+    padding-top: 15%;
 }
 
 #container-a {
     color: black;
     background-color: var(--left-inner-container);
-    display: inline-block;
     text-align: center;
-
-
+    width: 75%;
+    padding: 10%;
 }
 
 #container-b {
     background-color: var(--left-inner-container);
     color: black;
+    position: relative;
+    max-width: 40%;
+    min-width: 35%;
+    max-height: auto;
+    margin: auto 10% auto 60%;
 }
 
 /* Right Container */
@@ -49,38 +61,51 @@
 #right-container {
     background-color: var(--right-container);
     color: white;
-
+    padding: 5%;
 }
 
 #right-top-container {
     background-color: var(--right-top-container);
-
+    height: 35%;
+    width: 50%;
+    margin: auto auto auto 50%;
+    padding: 10%;
+    padding-top: 0;
 }
 
 #right-middle-container {
     background-color: var(--right-top-container);
-
+    margin: 5% 25% auto -5%;
 }
 
 #right-bottom-container {
     background-color: var(--right-top-container);
-
+    height: 35%;
+    width: 50%;
+    margin: 25% 50% auto auto;
+    padding: 10%;
+    padding-top: 0;
 }
 
 #container-c {
-
-
     background-color: var(--right-inner-container);
     color: black;
+    position: relative;
+    height: 70px;
 }
 
 #container-d {
     background-color: var(--right-inner-container);
     color: black;
+    margin: auto 30% auto 5%;
+    text-align: right;
 }
 
 #container-e {
     background-color: var(--right-inner-container);
     color: black;
-
+    text-align: right;
+    margin: auto auto auto 50%;
+    min-height: 35%;
+    padding: 25%;
 }
